# cipherocto

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  ECOSYSTEM.md  LICENSE  README.md  ROADMAP.md  START_HERE.md  pyproject.toml
.cargo/: config.toml
.github/: BRANCH_STRATEGY.md  CODEOWNERS  branch-protection-rules.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: agent-review.yml  ci.yml  coverage.yml  labels.yml  lint.yml  quota-router-python.yml  release.yml  rust.yml  security.yml  sync-next.yml
agents/hello-agent/: agent.ts  manifest.json
crates/octo-cli/: Cargo.toml
crates/octo-cli/src/: main.rs
crates/octo-core/: Cargo.toml
crates/octo-determin/: Cargo.toml
crates/octo-network/: Cargo.toml
crates/octo-network/src/: lib.rs  network.rs
crates/octo-registry/: Cargo.toml
crates/octo-registry/src/: lib.rs
crates/octo-runtime/: Cargo.toml
crates/octo-runtime/src/: lib.rs
crates/quota-router-cli/: Cargo.toml
crates/quota-router-cli/src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  providers.rs  proxy.rs
crates/quota-router-core/: Cargo.toml
crates/quota-router-core/benches/: key_hash_storage_bench.rs
crates/quota-router-core/src/: admin.rs  balance.rs  cache.rs  completion.rs  config.rs  fallback.rs  key_rate_limiter.rs  lib.rs  middleware.rs  providers.rs  proxy.rs  rate_limit.rs  router.rs  schema.rs  storage.rs
crates/quota-router-core/src/keys/: errors.rs  mod.rs  models.rs
crates/quota-router-pyo3/: Cargo.toml  build.rs
crates/quota-router-pyo3/src/: completion.rs  exceptions.rs  lib.rs  router.rs  types.rs
determin/: Cargo.toml
determin/benches/: decimal_benchmark.rs
determin/cli/: Cargo.toml  main.rs
determin/docs/: BENCHMARK_REPORT.md
determin/src/: arithmetic.rs  bigint.rs  consensus.rs  dact.rs  dact_lut.rs  dcs.rs  decimal.rs  decimal_internal.rs  dmat.rs  dqa.rs  dvec.rs  fuzz.rs  lib.rs  probe.rs
determin/verify/: generate_vectors.py  requirements.txt  verifier.py  verify_vectors.py
determin/verify/vectors/: dfp_vectors.jsonl
docs/: ARCHITECTURE.md  BLUEPRINT.md  ROLES.md  genesis-implementation-guide.md  openclaw.md  quota-router-python-sdk.md
docs/00-meta/: GLOSSARY.md  README.md  STYLE-GUIDE.md
docs/01-foundation/: builder-manifesto.md  litepaper.md  manifesto.md  roadmap.md
docs/02-product/: competitive-analysis.md  overview.md  user-personas.md
docs/03-technology/: ai-stack.md  blockchain-integration.md  system-architecture.md
docs/04-tokenomics/: distribution-schedule.md  governance.md  token-design.md
docs/05-growth/: content-strategy.md  partnerships.md
docs/07-developers/: contributing.md  getting-started.md  local-setup.md
docs/08-investors/: README.md
docs/ecosystem/: ai-assistants.md
docs/plans/: 2026-03-04-quota-router-mve-design.md  2026-03-04-quota-router-mve-implementation.md  2026-03-06-phase1-implementation-plan.md  2026-03-06-phase2-persistence-design.md  2026-03-06-phase3-quantization-design.md  2026-03-12-pyo3-bindings-design.md  2026-03-14-0106-dismantling-track-a.md  2026-03-14-0106-dismantling-track-b.md  2026-03-14-0903-a-key-core.md  2026-03-14-0903-b-team-management.md  2026-03-14-0903-c-key-validation-middleware.md  2026-03-14-0903-d-budget-enforcement.md  2026-03-14-0903-e-key-rate-limiting.md  2026-03-14-0903-f-key-management-routes.md  2026-03-14-0913-c-cache-integration.md  2026-03-14-0913-d-testing-config.md  2026-03-14-wal-pubsub-core-implementation.md  2026-03-18-rfc0113-matrices-fix.md  2026-03-21-decimal-core-type-design.md  2026-03-22-rfc0124-v1.3-fix.md  2026-03-28-rfc-0201-blob-implementation-missions.md
docs/quota-router-cli/: README.md  api-reference.md  user-guide.md
docs/research/: README.md  ZKP_Research_Report.md  agent-memory-comprehensive-research.md  agent-memory-explainer.md  ai-quota-marketplace-research.md  cairo-ai-research-report.md  luminair-air-deep-dive.md  (+15 more)
missions/: build-first-agent.md  custom-policy-engine.md  marketplace-design.md  multi-provider-support.md  onchain-registry-migration.md  orchestrator-runtime.md  quota-market-integration.md  quota-router-mve.md  reputation-system.md  stoolap-provider-integration.md  storage-provider-spec.md  token-swap-integration.md  zk-proof-verification.md
python/: pyproject.toml
python/quota_router/: __init__.py  __init__.pyi
rfcs/: 0000-cipherocto-architecture-overview.md  0000-template.md  0001-mission-lifecycle.md  0002-agent-manifest.md  0003-deterministic-execution-standard.md  0004-implementation-roadmap.md  0100-ai-quota-marketplace.md  0101-quota-router-agent.md  0102-wallet-cryptography.md  0103-unified-vector-sql-storage.md  0104-deterministic-floating-point.md  0105-deterministic-quant-arithmetic.md  0106-deterministic-numeric-tower.md  0107-deterministic-transformer-circuit.md  0107-production-vector-sql-storage-v2.md  0108-deterministic-training-circuits.md  0108-verifiable-ai-retrieval.md  0109-deterministic-linear-algebra-engine.md  0109-retrieval-architecture-read-economics.md  0110-deterministic-bigint.md  0110-verifiable-agent-memory.md  0111-knowledge-market-verifiable-data-assets.md  0113-retrieval-gateway-query-routing.md  0114-verifiable-reasoning-traces.md  0115-probabilistic-verification-markets.md  0116-unified-deterministic-execution-model.md  0117-state-virtualization-massive-scaling.md  0118-autonomous-agent-organizations.md  0119-alignment-control-mechanisms.md  0120-deterministic-ai-vm.md  0121-verifiable-large-model-execution.md  0122-mixture-of-experts.md  0123-scalable-verifiable-ai-execution.md  0124-proof-market-hierarchical-network.md  0125-model-liquidity-layer.md  0130-proof-of-inference-consensus.md  0131-deterministic-transformer-circuit.md  0132-deterministic-training-circuits.md  0133-proof-of-dataset-integrity.md  0134-self-verifying-ai-agents.md  (+35 more)
scripts/: compute_bigint_probe_root.py  compute_dact_probe_root.py  compute_dcs_probe_root.py  compute_decimal_config_hash.py  compute_decimal_probe_root.py  compute_dlae_probe_root.py  compute_dmat_probe_root.py  compute_dvec_probe_root.py
tests/: smoke_test.py
(+370 files in other folders)
