[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CipherOcto"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Networking (future libp2p integration)
libp2p = { version = "0.53", features = ["tokio", "noise", "tcp", "yamux"] }
# Local database (proto-blockchain state)
sled = "0.34"
# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }
# Cryptography
sha2 = "0.10"
# Async traits
async-trait = "0.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0"
