[package]
name = "octo-determin"
version = "0.1.0"
edition = "2021"
description = "Deterministic Floating-Point (DFP) implementation for CipherOcto"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
softfloat-rs = "0.1"
rand = "0.8"

[lib]
name = "octo_determin"
path = "src/lib.rs"
