[package]
name = "octo-determin"
version = "0.1.0"
edition = "2021"
description = "Deterministic Floating-Point (DFP) implementation for CipherOcto"

# Per RFC-0104: Compiler flags for deterministic execution
[profile.release]
# Overflow checks are OFF by default in release - REQUIRED for DFP
# Do NOT set overflow-checks = true, as it would break saturating arithmetic
# Note: We use saturating_add/sub/mul explicitly in code where needed

# LTO disabled for faster builds - can enable for production
# lto = "thin"

[profile.bench]
# Bench uses release flags
inherits = "release"

# Test profile - use release for DFP determinism
# Run with: cargo test --profile test
[profile.test]
inherits = "release"

# Fuzz profile - use release for performance and DFP determinism
# Run with: cargo fuzz --profile fuzz
[profile.fuzz]
inherits = "release"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
non_consensus = []

[dev-dependencies]
proptest = "1.4"
softfloat-rs = "0.1"
rand = "0.8"

[lib]
name = "octo_determin"
path = "src/lib.rs"
