[package]
name = "octo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "octo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

octo-core = { path = "../octo-core" }
octo-network = { path = "../octo-network" }
octo-registry = { path = "../octo-registry" }
octo-runtime = { path = "../octo-runtime" }
