[package]
name = "octo-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.56", features = ["tokio", "noise", "tcp", "yamux", "request-response"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"

octo-core = { path = "../octo-core" }
octo-registry = { path = "../octo-registry" }
