[package]
name = "octo-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
