[package]
name = "octo-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"

octo-core = { path = "../octo-core" }
octo-registry = { path = "../octo-registry" }
