[package]
name = "quota-router-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP server
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
reqwest.workspace = true

# Config
directories.workspace = true
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
parking_lot.workspace = true

# Random
rand.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Errors
anyhow.workspace = true
thiserror.workspace = true

# Database
stoolap = { git = "https://github.com/CipherOcto/stoolap", branch = "feat/blockchain-sql" }

# HTTP body parsing
http-body = "1.0"
http-body-util.workspace = true

# For HMAC-SHA256 key hashing
hmac-sha256 = "1.1"

# For SHA256 (used in event_id computation)
sha2 = "0.10"

# For hex encoding of key hashes
hex = "0.4"

[lib]
name = "quota_router_core"
path = "src/lib.rs"

[[bench]]
name = "key_hash_storage_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
