[package]
name = "quota-router-pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Core library
quota-router-core = { path = "../quota-router-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID generation
uuid.workspace = true

# Error handling
thiserror.workspace = true

[build-dependencies]
pyo3-build-config = "0.20"
